bugfix [#8263] Video Sequence Editor > Sequence > Reassign Inputs > crash just missing null checks